--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,16 +4,22 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
+           and uncomment the following Encore helpers to start using Symfony UX #}           
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
+            <link rel="stylesheet" href="/build/app.css">
         {% endblock %}
 
         {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
+            <script src="/build/app.js"></script>
         {% endblock %}
     </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    <header>
+    {% include '_navbar.html.twig' %}
+    </header>
+ <body>
+        {% block body %}
+        <img src="{{ asset('build/path_to_image.png') }}" alt=""/>
+        {% endblock %}
+ </body>   
+
 </html>
