--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,20 +6,22 @@
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}           
         {% block stylesheets %}
-            <link rel="stylesheet" href="/build/app.css">
+            {{ encore_entry_link_tags('app') }}
+            <img src="{{ asset('build/popCorn.png') }}" alt=""/>
+
         {% endblock %}
 
-        {% block javascripts %}
-            <script src="/build/app.js"></script>
-        {% endblock %}
+       {% block javascripts %}
+           {{ encore_entry_script_tags('app') }}
+       {% endblock %}
     </head>
     <header>
     {% include '_navbar.html.twig' %}
     </header>
  <body>
         {% block body %}
-        <img src="{{ asset('build/path_to_image.png') }}" alt=""/>
         {% endblock %}
  </body>   
 
 </html>
+
