--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -6,7 +6,7 @@
 
 {% if programs %}
     <h1 class="mb-5">Les 3 dernières séries de la catégorie :
-      {{ programs.0.category.name }}
+      {{ categories.name }}
     </h1>
     {% for program in programs %}
     <div class="mb-5">
@@ -18,6 +18,27 @@
     {% else %}
     aucune série trouvée
     {% endfor %}
+
+ <div class="container-fluide text-center">
+      <div class="row">
+        <h1 class="mb-5">Les dernières séries de la catégorie :
+          {{ categories.name }}
+        </h1>
+  {% for program in programs %}
+          <div class="card col m-5" style="width: 18rem;">
+              <img src="{{program.poster}}" class="card-img-top" alt="{{ program.title }}">
+              <div class="card-body">
+                <h5 class="card-title">{{ program.title }}</h5>
+                <p class="card-text">{{ program.summary }}</p>
+                <a href="{{ path("program_show", { id: program.id }) }}" class="btn btn-primary">Voir la fiche</a>
+              </div>
+            </div>
+  {% else %}
+      Aucune série trouvée.
+  {% endfor %}
+      </div>
+  </div>
+
 
 {% endif %}
     <a href="{{ path('category_index') }}">
