--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -11,7 +11,7 @@
     <p>{{ program.summary }}</p>
     <p>Catégorie : {{ program.category.name }}</p>
     {% for season in seasons %}
-    <a href="{{ path("program_season_show", { programId: program.id, seasonId: season.id }) }}" class="m-3"> <h3>Saison : {{ season.number }}</h3></a>
+    <a href="{{ path("program_season_show", { program_id: program.id, season_id: season.id }) }}" class="m-3"> <h3>Saison : {{ season.number }}</h3></a>
     {% endfor %}
     <a class="m-3" href="{{ path('program_index') }}">
       Retour à la liste des programmes
