--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -15,4 +15,5 @@
     <a href="{{ path('app_index') }}">
         Retour à l'accueil
     </a>
+    <a href="{{ path('category_new') }}">Ajouter une categorie</a>
 {% endblock %}
