--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -25,6 +25,7 @@
     <a href="{{ path('app_index') }}">
         Retour à l'accueil
     </a>
+     <a href="{{ path('program_new') }}"><h3>Ajouter une serie</h3></a>
 {% endblock %}
 
 
