--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,4 +1,4 @@
 {% extends 'base.html.twig' %}{% block body %}
-<h1> Hello ! </h1>
+<h1> Back to 90's Pop Corn </h1>
 {# <img src="{{ asset('build/path_to_image.png') }}" alt=""/> #}
 {% endblock %}
