--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -10,10 +10,10 @@
           <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/programs/">Programs</a>
+          <a class="nav-link" href="/programs/">Programes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/categories/">Categories</a>
+          <a class="nav-link" href="/categories/">Catégories</a>
         </li>
       </ul>
     </div>
