--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}All categories{% endblock %}
+{% block title %}Toutes les catégories {% endblock %}
 
 {% block body %}
     <h1>Toutes les Catégories de la table category : </h1>
