--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 {% if programs %}
-    <h1 class="mb-5">Les 3 dernières séries de la catégorie :
+    <h1 class="mb-5">Voici les 3 dernières séries de la catégorie :
       {{ categories.name }}
     </h1>
     {% for program in programs %}
