--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -3,16 +3,23 @@
 {% block title %}All programs{% endblock %}
 
 {% block body %}
-    <h1>Toutes les séries de la table program : </h1>
-    <div class="container-fluide">
-        <div class="row">
+    <div class="container">
+        <section>
+            <div class="mt-5 text-center">
+                <h1>Toutes vos séries disponibles </h1>
+             </div>
+        </section>
+    <section id="new" class="p-5">
+        <div class="row mt-2">
     {% for program in programs %}
-        <div class="col-lg-2 col-md-4">
-            <div class="card col m-3" style="width: 18rem;">
-                <img src="{{program.poster}}" class="card-img-top" alt="{{ program.title }}">
+                <div class="card-deck col-lg-4">
+            <div class="card col m-7" style="200em">
+                <img src="{{program.poster}}" height="250px" class="card-img-top" alt="{{ program.title }}">
                 <div class="card-body">
-                  <h5 class="card-title">{{ program.title }}</h5>
-                  <p class="card-text">{{ program.summary }}</p>
+                <div class="text-center">
+                      <h5 class="card-title">{{ program.title }}</h5>
+                        <p class="card-text">{{ program.summary }}</p>
+                </div>
                   <a href="{{ path("program_show", { id: program.id }) }}" class="btn btn-primary">Voir la fiche</a>
                 </div>
               </div>
@@ -21,6 +28,7 @@
         Aucune série trouvée.
     {% endfor %}
         </div>
+    </section>
     </div>
     <a href="{{ path('app_index') }}">
         Retour à l'accueil
