--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-<h1 class="text-center">Ajouter une nouvel serie</h1>
+<h1 class="text-center">Ajouter une nouvelle serie</h1>
 <div class="d-flex justify-content-center m-5">
         {{ form_start(form) }}
         {{ form_widget(form) }}
