--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -14,7 +14,7 @@
         <a href="{{ path("program_episode_show", { program_id: program.id, season_id: season.id, episode_id: episode.id }) }}"><li class="list-group-item m-3">Episode {{ episode.number }} : {{ episode.title }}</li></a>
        <p>{{ episode.synopsis }}</p>
     {% else %}
-      <li class="list-group-item ">Aucun épisode trouvé.</li>
+      <li class="list-group-item ">Aucun épisode trouvé</li>
     {% endfor %}
     <a href="{{ path("program_show", { id: program.id }) }}">
       Retour à la fiche du programme
