--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <h1 class="text-center">Ajouter une nouvelle serie</h1>
 <div class="d-flex justify-content-center m-5">
-        {{ form_start(form) }}
+        {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
         {{ form_widget(form) }}
         <input type='submit' value='Add program' class="m-3">
         {{ form_end(form) }}
