--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,20 +1,52 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#"> </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse d-flex justify-content-evenly" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/programs/">Programes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/categories/">Catégories</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="assets/images/PopCorn.png"> </a>
+     <ul class="nav-item active">
+   <a class="nav-link" href="/">Home</a>
+ </ul>
+  <ul class="nav-item">
+   <a class="nav-link" href="/programs/">Programes</a>
+ </ul>
+ </li>
+ <ul class="nav-item">
+   <a class="nav-link" href="/categories/">Catégories</a>
+ </ul>
+    <form class="d-flex">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
