--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -18,9 +18,9 @@
                 <div class="card-body">
                 <div class="text-center">
                       <h5 class="card-title">{{ program.title }}</h5>
-                        <p class="card-text">{{ program.summary }}</p>
+                        <p class="card-text">{{ program.summary }}</p> 
                 </div>
-                  <a href="{{ path("program_show", { id: program.id }) }}" class="btn btn-primary">Voir la fiche</a>
+                  <a href="{{ path("program_show", { slug: program.slug }) }}" class="btn btn-primary">Voir la fiche</a>
                 </div>
               </div>
             </div>
