--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -11,6 +11,14 @@
  <ul class="nav-item">
    <a class="nav-link" href="/categories/">Catégories</a>
  </ul>
+ <ul>
+ {% if app.user %}
+    {{ app.user.email }}
+    <a href="{{ path('app_logout') }}"> Se déconnecter</a>
+{% else %}
+    <a href="{{ path('app_login') }}"> Se connecter</a>
+{% endif %}
+</ul>
     <form class="d-flex">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Search</button>
