--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -4,7 +4,6 @@
 
 {% block body %}
     <h1>Episode</h1>
-
     <table class="table">
         <tbody>
             <tr>
@@ -25,7 +24,21 @@
             </tr>
         </tbody>
     </table>
-
+    {% if app.user %}
+			<h3>Add a comment</h3>
+			<div class="text-center mt-3">
+				{{ form_start(form) }}
+				{{ form_widget(form) }}
+				<input type='submit' value='Add comment'>
+				{{ form_end(form) }}
+			</div>
+		{% endif %}
+		<h3 class="mt-5">Comments</h3>
+		{% for comment in episode.comments %}
+			<h4 class"mt-3">Par
+				{{comment.author.username}}</h4>
+			<p>{{comment.comment}}</p>
+		{% endfor %}
     <a href="{{ path('episode_index') }}">Retour à la liste</a>
 
     <a href="{{ path('episode_edit', {'slug': episode.slug}) }}">Modifier</a>
