--- a/templates/program/episode_show.html.twig
+++ b/templates/program/episode_show.html.twig
@@ -23,6 +23,9 @@
 				{{comment.author.username}}</h4>
 			<p>{{comment.comment}}</p>
 			<p>Rate : {{comment.rate}}</p>
+            {% if is_granted("ROLE_CONTRIBUTOR") %}
+	            {{ include('comment/_delete_form.html.twig') }}
+            {% endif %}
 		{% endfor %}
 		    <a href="{{ path('app_index') }}"> Retour à l'accueil </a>
     </div>     
