--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -38,6 +38,9 @@
 			<h4 class"mt-3">Par
 				{{comment.author.username}}</h4>
 			<p>{{comment.comment}}</p>
+            {% if is_granted("ROLE_CONTRIBUTOR") %}
+				{{ include('comment/_delete_form.html.twig') }}
+			{% endif %}
 		{% endfor %}
     <a href="{{ path('episode_index') }}">Retour à la liste</a>
 
