--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -39,4 +39,7 @@
         Sign in
     </button>
 </form>
+</br>
+<a href="{{ path('app_register') }}"><h3>Créer un compte</h3></a>
+
 {% endblock %}
