--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -12,33 +12,34 @@
     <section id="new" class="p-5">
         <div class="row mt-2">
     {% for program in programs %}
-                <div class="card-deck col-lg-4">
-            <div class="card col m-7" style="200em">
-                <img src="{{program.poster}}" height="250px" class="card-img-top" alt="{{ program.title }}">
-                <div class="card-body">
+        <div class="card-deck col-lg-4">
+				<div class="card col m-3" style="width: 18rem;">
+					<img src="{{program.poster}}" class="card-img-top" style="height: 300px;" alt="{{ program.title }}">
+            <div class="card-body">
                 <div class="text-center">
                       <h5 class="card-title">{{ program.title }}</h5>
                         <p class="card-text">{{ program.summary }}</p> 
+                        <a href="{{ path("program_show", { slug: program.slug }) }}" class="btn btn-primary">Voir la fiche</a>
                         {% if is_granted("ROLE_ADMIN") %}
-
-				<a class="btn border" href="{{ path('program_edit', { 'slug': program.slug} ) }}">Éditer</a>
-
-			{% endif %}
+				            <a class="btn border" href="{{ path('program_edit', { 'slug': program.slug} ) }}">Éditer</a>
+                        {% endif %}
                 </div>
-                  <a href="{{ path("program_show", { slug: program.slug }) }}" class="btn btn-primary">Voir la fiche</a>
-                </div>
-              </div>
             </div>
+            </div>
+        </div>
     {% else %}
         Aucune série trouvée.
     {% endfor %}
         </div>
     </section>
     </div>
-    <a href="{{ path('app_index') }}">
-        Retour à l'accueil
-    </a>
-     <a href="{{ path('program_new') }}"><h3>Ajouter une serie</h3></a>
+    
+<div class="mb-5 text-center">
+    <button type="button" class="btn btn-light"><a href="{{ path('program_new') }}"><h5>Ajouter une serie</h5></a></button>
+</div>
+<div class="p-5 text-end">
+<button type="button" class="btn btn-light"><a href="{{ path('app_index') }}"> Retour à l'accueil </a></button>
+</div>
 {% endblock %}
 
 
