--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,13 +1,20 @@
 @import "~bootstrap/scss/bootstrap";
 
 body {
-    background-color: rgb(241, 215, 240);
+    background-color: rgb(173, 128, 169);
 
 }
 
-$theme-colors: (
-  "primary": yellow,
-  "danger": #ff4136
-);
+.button-light {
+  background-color: transparent;
+  border-color: var(--primarygreen);
+}
+
+  a {
+    text-decoration: none;
+  }
+
+
+
 
 
