--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,4 +1,22 @@
-{% extends 'base.html.twig' %}{% block body %}
-<h1> Back to 90's Pop Corn </h1>
-{# <img src="{{ asset('build/path_to_image.png') }}" alt=""/> #}
+{% extends 'base.html.twig' %}
+
+{% block body %}
+<h1> Back to 90'series </h1>
+	<h2 class="text-center">Les derniers ajouts ! </h2>
+	<div class="row">
+		{% for program in programs | reverse %}
+			<div class="col-lg-3 col-md-4">
+				<div class="card col m-3" style="width: 18rem;">
+					<img src="{{program.poster}}" class="card-img-top" style="height: 300px;" alt="{{ program.title }}">
+					<div class="card-body">
+                    <div class="text-center">
+						<h5 class="card-title">{{ program.title }}</h5>
+						<p class="card-text">{{ program.summary|slice(0, 80) }}...</p>
+						<a href="{{ path("program_show", { slug: program.slug }) }}" class="btn btn-primary">Voir la fiche</a>
+                        </div>
+					</div>
+				</div>
+			</div>
+		{% endfor %}
+	</div>
 {% endblock %}
